# moppa

./: .env.example  .gitignore  README.md  docker-compose.yml
moppa_backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  test.py
moppa_backend/app/: logging_config.py  main.py
moppa_backend/app/api/: agent_predictions.py  api_keys.py  auth.py  community_predictions.py  data_sources.py  dependencies.py  event_filter_rules.py  events.py  health.py  model_endpoints.py  predictions.py  question_comments.py  question_templates.py  questions.py  s1_ingest.py  task_configs.py  tasks.py
moppa_backend/app/config/: settings.py
moppa_backend/app/core/: __init__.py  errors.py
moppa_backend/app/db/: __init__.py  models.py  session.py
moppa_backend/app/integrations/: tavily_search_client.py
moppa_backend/app/jobs/: s1_scheduler.py
moppa_backend/app/models/: __init__.py  agent_prediction_model.py  api_key_model.py  auth_model.py  common_model.py  community_prediction_model.py  data_source_model.py  event_filter_rule_model.py  event_model.py  model_endpoint_model.py  prediction_model.py  question_comment_model.py  question_model.py  question_template_model.py  s1_ingest_model.py  task_config_model.py  task_execution_model.py
moppa_backend/app/repositories/: agent_prediction_repository.py  api_key_repository.py  auth_repository.py  community_prediction_repository.py  data_source_repository.py  event_repository.py  (+10 more)
moppa_backend/tests/: test_auto_question_service.py  test_question_location_analysis_service.py
(+72 files in other folders)
