[project]
name = "moppa-backend"
version = "0.1.0"
description = "FastAPI backend for MOPPA"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.116.1",
    "uvicorn[standard]==0.35.0",
    "SQLAlchemy==2.0.41",
    "psycopg2-binary==2.9.10",
    "APScheduler==3.10.4",
    "openai==1.55.3"
]
